--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,39 @@
-baseURL = 'http://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
+baseURL = "http://localhost"
+title = "nuxui"
+theme = "hugo-geekdoc"
+
+pluralizeListTitles = false
+
+# Geekdoc required configuration
+pygmentsUseClasses = true
+pygmentsCodeFences = true
+disablePathToLower = true
+
+
+# Required if you want to render robots.txt template
+enableRobotsTXT = true
+
+# Needed for mermaid shortcodes
+[markup]
+  [markup.goldmark.renderer]
+    # Needed for mermaid shortcode
+    unsafe = true
+  [markup.tableOfContents]
+    startLevel = 1
+    endLevel = 9
+
+[taxonomies]
+   tag = "tags"
+
+[params]
+  geekdocCollapseAllSections = false
+  geekdocMenuBundle = false
+  # geekdocNextPrev = false
+  # geekdocSearch = true
+  # geekdocFileTreeSortBy = "title"
+  # geekdocHiddenTocTree = true
+  # geekdocFlatSection = false
+  # geekdocNav = true
+  # type = "posts"
+  # geekdocToC = 5
+  # weight = 10
